<?xml version="1.0" encoding="utf-8"?>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggleButtonGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.8"
                app:layout_constraintVertical_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:singleSelection="true">

            </com.google.android.material.button.MaterialButtonToggleGroup>


            <TextView
                android:id="@+id/counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/num_steps"
                android:textAlignment="center"
                android:textSize="88sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.21" />

            <TextView
                android:id="@+id/goal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:text="@string/goal"
                app:layout_constraintBottom_toTopOf="@+id/counter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/progressBar"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/steps_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="80dp"
                android:text="@string/steps"
                app:layout_constraintBottom_toBottomOf="@+id/progressBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/counter"
                app:layout_constraintVertical_bias="0.0" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progressBar"
                android:layout_width="173dp"
                android:layout_height="193dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:importantForAccessibility="no"
                android:indeterminate="false"
                android:maxHeight="320dp"
                app:indicatorColor="?attr/colorOnTertiaryContainer"
                app:indicatorSize="304dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.042"
                app:trackColor="?attr/colorTertiaryContainer"
                app:trackThickness="42dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="36dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/progressBar">

                <androidx.cardview.widget.CardView
                    style="@style/Widget.Material3.CardView.Filled"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    app:cardBackgroundColor="?attr/colorPrimaryContainer"
                    app:cardCornerRadius="24dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingHorizontal="16dp"
                        android:paddingVertical="18dp">

                        <View
                            android:id="@+id/view_distance_background"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:background="@drawable/shape_circle"
                            android:backgroundTint="?attr/colorPrimary"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:importantForAccessibility="no"
                            app:layout_constraintBottom_toBottomOf="@+id/view_distance_background"
                            app:layout_constraintEnd_toEndOf="@+id/view_distance_background"
                            app:layout_constraintStart_toStartOf="@+id/view_distance_background"
                            app:layout_constraintTop_toTopOf="@+id/view_distance_background"
                            app:srcCompat="@drawable/conversion_path_fill0_wght400_grad0_opsz24"
                            app:tint="?attr/colorOnPrimary" />

                        <TextView
                            android:id="@+id/text_distance_travelled"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginBottom="2dp"
                            android:textAppearance="?attr/textAppearanceTitleMedium"
                            app:layout_constraintBottom_toTopOf="@+id/text_distance_travelled_label"
                            app:layout_constraintStart_toEndOf="@+id/view_distance_background"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_chainStyle="packed"
                            android:text="300 m" />

                        <TextView
                            android:id="@+id/text_distance_travelled_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Altitude"
                            android:textAppearance="?attr/textAppearanceBodyMedium"
                            app:layout_constraintBottom_toBottomOf="@+id/view_distance_background"
                            app:layout_constraintStart_toStartOf="@+id/text_distance_travelled"
                            app:layout_constraintTop_toBottomOf="@+id/text_distance_travelled"
                            app:layout_constraintVertical_chainStyle="packed" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    style="@style/Widget.Material3.CardView.Filled"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="?attr/colorTertiaryContainer"
                    android:layout_marginTop="12dp"
                    app:cardCornerRadius="24dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingHorizontal="16dp"
                        android:paddingVertical="18dp">

                        <View
                            android:id="@+id/view_calorie_background"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:background="@drawable/shape_circle"
                            android:backgroundTint="?attr/colorTertiary"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:importantForAccessibility="no"
                            app:layout_constraintBottom_toBottomOf="@+id/view_calorie_background"
                            app:layout_constraintEnd_toEndOf="@+id/view_calorie_background"
                            app:layout_constraintStart_toStartOf="@+id/view_calorie_background"
                            app:layout_constraintTop_toTopOf="@+id/view_calorie_background"
                            app:srcCompat="@drawable/local_fire_department_fill0_wght400_grad0_opsz24"
                            app:tint="?attr/colorOnTertiary" />

                        <TextView
                            android:id="@+id/text_calorie_burned"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="210 kcal"
                            android:textAppearance="?attr/textAppearanceTitleMedium"
                            android:layout_marginStart="16dp"
                            android:layout_marginBottom="2dp"
                            app:layout_constraintBottom_toTopOf="@+id/text_calorie_burned_label"
                            app:layout_constraintStart_toEndOf="@+id/view_calorie_background"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_chainStyle="packed" />

                        <TextView
                            android:id="@+id/text_calorie_burned_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/calorie_burned"
                            android:textAppearance="?attr/textAppearanceBodyMedium"
                            app:layout_constraintBottom_toBottomOf="@+id/view_calorie_background"
                            app:layout_constraintStart_toStartOf="@+id/text_calorie_burned"
                            app:layout_constraintTop_toBottomOf="@+id/text_calorie_burned"
                            app:layout_constraintVertical_chainStyle="packed" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    style="@style/Widget.Material3.CardView.Filled"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:cardBackgroundColor="?attr/colorSecondaryContainer"
                    app:cardCornerRadius="24dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="89dp"
                        android:orientation="vertical"
                        android:paddingHorizontal="16dp"
                        android:paddingVertical="18dp">

                        <View
                            android:id="@+id/view_carbon_dioxide_background"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:background="@drawable/shape_circle"
                            android:backgroundTint="?attr/colorSecondary"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:importantForAccessibility="no"
                            app:layout_constraintBottom_toBottomOf="@+id/view_carbon_dioxide_background"
                            app:layout_constraintEnd_toEndOf="@+id/view_carbon_dioxide_background"
                            app:layout_constraintStart_toStartOf="@+id/view_carbon_dioxide_background"
                            app:layout_constraintTop_toTopOf="@+id/view_carbon_dioxide_background"
                            app:srcCompat="@drawable/bubble_chart_fill0_wght400_grad0_opsz24"
                            app:tint="?attr/colorOnSecondary" />

                        <TextView
                            android:id="@+id/text_carbon_dioxide_saved"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginBottom="2dp"
                            android:textAppearance="?attr/textAppearanceTitleMedium"
                            app:layout_constraintBottom_toTopOf="@+id/text_carbon_dioxide_saved_label"
                            app:layout_constraintStart_toEndOf="@+id/view_carbon_dioxide_background"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_chainStyle="packed"
                            android:text="300 kcal" />

                        <TextView
                            android:id="@+id/text_carbon_dioxide_saved_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/calorie_intake"
                            android:textAppearance="?attr/textAppearanceBodyMedium"
                            app:layout_constraintBottom_toBottomOf="@+id/view_carbon_dioxide_background"
                            app:layout_constraintStart_toStartOf="@+id/text_carbon_dioxide_saved"
                            app:layout_constraintTop_toBottomOf="@+id/text_carbon_dioxide_saved"
                            app:layout_constraintVertical_chainStyle="packed" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
